Fix Modal Bug Overflow

--- a/preprocessor/less/v_1/dashboard.less
+++ b/preprocessor/less/v_1/dashboard.less
@@ -2,6 +2,10 @@
 	display: none;
 }
 
+.modal.show{
+	overflow-y: auto;
+}
+
 .bootstrap-tagsinput .tag {
     background-color: #9f87de;
     padding: 0.05rem 0.4rem 0.05rem 0.4rem;
